feat: journal features
